--- a/medpredictor/notebooks/03-exploratory-data-analysis.ipynb
+++ b/medpredictor/notebooks/03-exploratory-data-analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,45 +22,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 253680 entries, 0 to 253679\n",
-      "Data columns (total 22 columns):\n",
-      " #   Column                Non-Null Count   Dtype  \n",
-      "---  ------                --------------   -----  \n",
-      " 0   Diabetes_012          253680 non-null  object \n",
-      " 1   HighBP                253680 non-null  object \n",
-      " 2   HighChol              253680 non-null  object \n",
-      " 3   CholCheck             253680 non-null  object \n",
-      " 4   BMI                   253680 non-null  float64\n",
-      " 5   Smoker                253680 non-null  object \n",
-      " 6   Stroke                253680 non-null  object \n",
-      " 7   HeartDiseaseorAttack  253680 non-null  object \n",
-      " 8   PhysActivity          253680 non-null  object \n",
-      " 9   Fruits                253680 non-null  object \n",
-      " 10  Veggies               253680 non-null  object \n",
-      " 11  HvyAlcoholConsump     253680 non-null  object \n",
-      " 12  AnyHealthcare         253680 non-null  object \n",
-      " 13  NoDocbcCost           253680 non-null  object \n",
-      " 14  GenHlth               253680 non-null  object \n",
-      " 15  MentHlth              253680 non-null  float64\n",
-      " 16  PhysHlth              253680 non-null  float64\n",
-      " 17  DiffWalk              253680 non-null  object \n",
-      " 18  Sex                   253680 non-null  object \n",
-      " 19  Age                   253680 non-null  object \n",
-      " 20  Education             253680 non-null  object \n",
-      " 21  Income                253680 non-null  object \n",
-      "dtypes: float64(3), object(19)\n",
-      "memory usage: 42.6+ MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.read_csv(Config.data_cleaned_path)\n",
     "df.info()"
@@ -68,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,22 +458,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "values_age_order = ['18 to 24','25 to 29', '30 to 34', '35 to 39',\n",
-    "                '40 to 44', '45 to 49', '50 to 54', '55 to 59',\n",
-    "                '60 to 64', '65 to 69', '70 to 74', '75 to 79', '80 or older']\n",
+    "values_age_order = Utils.values_age_order\n",
     "\n",
-    "values_income_order = ['Less than $10,000', \n",
-    "                '$10k to less than $15k', \n",
-    "                '$15k to less than $20k', \n",
-    "                '$20k to less than $25k',\n",
-    "                '$25k to less than $35k', \n",
-    "                '$35k to less than $50k', \n",
-    "                '$50k to less than $75k', \n",
-    "                '$75,000 or more']\n",
+    "values_income_order = Utils.values_income_order\n",
     "\n",
     "values_income_order_t = transform_values(values_income_order)\n",
     "\n",
@@ -522,33 +477,18 @@
     "    \"$50k to $75k\": \"#800080\",\n",
     "    \"$75k or more\": \"#4B0082\"}\n",
     "\n",
-    "values_education_order = ['Never attended school or only kindergarten',\n",
-    "                   'Elementary',\n",
-    "                   'Some high school',\n",
-    "                   'High school graduate', \n",
-    "                   'Some college or technical school',\n",
-    "                   'College graduate']\n",
+    "values_education_order = Utils.values_education_order\n",
     "\n",
-    "values_sex_order = [\"Female\", \"Male\"]\n",
+    "values_sex_order = Utils.values_sex_order\n",
     "\n",
     "dict_colors_sex = {'Female':'#E03FB8',\n",
     "               'Male': '#608DE0'}\n",
     "\n",
-    "values_eh_order = [\"Eats fruits and vegetables\", \n",
-    "                   \"Only eats fruits\", \n",
-    "                   \"Only eats vegetables\", \n",
-    "                   \"Does not eat fruits neither vegetables\"]\n",
+    "values_eh_order = Utils.values_eh_order\n",
     "\n",
-    "values_bh_order = [\"Uses alcohol and tobacco\", \n",
-    "                   \"Only consumes alcohol\", \n",
-    "                   \"Only uses tobacco\", \n",
-    "                   \"Does not use alcohol neither tobacco\"]\n",
+    "values_bh_order = Utils.values_bh_order\n",
     "\n",
-    "values_status_order = ['Excellent',\n",
-    "                'Very good',\n",
-    "                'Good',\n",
-    "                'Fair',\n",
-    "                'Poor']\n",
+    "values_status_order = Utils.values_status_order\n",
     "\n",
     "dict_colors_status = {'Excellent':'#1976D2',\n",
     "               'Very good':'#388E3C',\n",
@@ -556,24 +496,17 @@
     "               'Fair': '#F57C00',\n",
     "               'Poor': '#D32F2F'}\n",
     "\n",
-    "answer_filter_order = ['Yes', 'No']\n",
+    "answer_filter_order = Utils.answer_filter_order\n",
     "\n",
-    "values_diabetes_order = ['No diabetes',\n",
-    "                         'Prediabetes',\n",
-    "                         'Diabetes']\n",
+    "values_diabetes_order = Utils.values_diabetes_order\n",
     "\n",
-    "values_age_range_order = ['Young',\n",
-    "                          'Young adulthood',\n",
-    "                          'Middle adulthood',\n",
-    "                          'Late adulthood',\n",
-    "                          'Old age']\n",
+    "values_age_range_order = Utils.values_age_range_order\n",
     "\n",
     "dict_colors_age_range = {\"Young\":\"#81C784\", \n",
     "               \"Young adulthood\":\"#64B5F6\", \n",
     "               \"Middle adulthood\":\"#FFD54F\", \n",
     "               \"Late adulthood\":\"#FF8A65\",\n",
-    "               \"Old age\":\"#BDBDBD\"}\n",
-    "\n"
+    "               \"Old age\":\"#BDBDBD\"}"
    ]
   },
   {
@@ -585,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -998,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1046,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1124,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1200,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1457,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1689,7 +1622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1954,7 +1887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2038,7 +1971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2245,7 +2178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2571,7 +2504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2727,7 +2660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2969,7 +2902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3124,7 +3057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3357,7 +3290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3521,7 +3454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3764,7 +3697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3919,7 +3852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4154,7 +4087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4308,7 +4241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4546,7 +4479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4846,7 +4779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -5152,7 +5085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -5489,7 +5422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
